--- a/src/app/userlist/userlist.component.html
+++ b/src/app/userlist/userlist.component.html
@@ -1,67 +1,57 @@
-<div fxLayout="row wrap" fxLayoutGap="12px">
-  <mat-card class="example-card"
-    ><mat-card-header>
-      <mat-card-title>User Listing</mat-card-title></mat-card-header
-    ><mat-card-content>
-      <div class="mat-elevation-z8">
-        <table matSort mat-table [dataSource]="dataSource">
-          <!-- Position Column -->
-          <ng-container matColumnDef="id">
-            <th mat-header-cell mat-sort-header *matHeaderCellDef>Username</th>
-
-            <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-          </ng-container>
-          <!-- Name Column -->
-          <ng-container matColumnDef="name">
-            <th mat-header-cell mat-sort-header *matHeaderCellDef>Name</th>
-
-            <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-          </ng-container>
-          <!-- Weight Column -->
-          <ng-container matColumnDef="email">
-            <th mat-header-cell mat-sort-header *matHeaderCellDef>Email</th>
-
-            <td mat-cell *matCellDef="let element">{{ element.email }}</td>
-          </ng-container>
-          <ng-container matColumnDef="role">
-            <th mat-header-cell mat-sort-header *matHeaderCellDef>Role</th>
-
-            <td mat-cell *matCellDef="let element">
-              {{ element.role === "" ? "Un Assigned" : element.role }}
-            </td>
-          </ng-container>
-          <!-- Symbol Column -->
-          <ng-container matColumnDef="status">
-            <th mat-header-cell mat-sort-header *matHeaderCellDef>Status</th>
-
-            <td mat-cell *matCellDef="let element">
-              {{ element.isActive ? "Active" : "InActive" }}
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef>Action</th>
-
-            <td mat-cell *matCellDef="let element">
-              <a
-                *ngIf="element.role != 'admin'"
-                (click)="updateUser(element.id)"
-                mat-raised-button
-                color="primary"
-                >Update</a
-              >
-            </td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
-        <mat-paginator
-          [pageSizeOptions]="[5, 10, 20]"
-          showFirstLastButtons
-          aria-label="Select page of periodic elements"
-        >
-        </mat-paginator>
-      </div> </mat-card-content
-  ></mat-card>
-</div>
+<mat-card class="example-card">
+  <mat-card-header>
+    <mat-card-title>User Listing</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <div
+      style="max-width: 600px; overflow-x: auto; white-space: nowrap"
+      class="mat-elevation-z8"
+    >
+      <table matSort mat-table [dataSource]="dataSource">
+        <ng-container matColumnDef="id">
+          <th mat-header-cell mat-sort-header *matHeaderCellDef>Username</th>
+          <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+        </ng-container>
+        <ng-container matColumnDef="name">
+          <th mat-header-cell mat-sort-header *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        </ng-container>
+        <ng-container matColumnDef="email">
+          <th mat-header-cell mat-sort-header *matHeaderCellDef>Email</th>
+          <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+        </ng-container>
+        <ng-container matColumnDef="role">
+          <th mat-header-cell mat-sort-header *matHeaderCellDef>Role</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.role === "" ? "Un Assigned" : element.role }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="status">
+          <th mat-header-cell mat-sort-header *matHeaderCellDef>Status</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.isActive ? "Active" : "InActive" }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef>Action</th>
+          <td mat-cell *matCellDef="let element">
+            <a
+              *ngIf="element.role != 'admin'"
+              (click)="updateUser(element.id)"
+              mat-raised-button
+              color="primary"
+              >Update</a
+            >
+          </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+      <mat-paginator
+        [pageSizeOptions]="[5, 10, 20]"
+        showFirstLastButtons
+        aria-label="Select page of periodic elements"
+      >
+      </mat-paginator>
+    </div> </mat-card-content
+></mat-card>
