--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,14 @@
 <mat-card>
   <mat-card-header>
-    <h2>User LogIn</h2>
+    <mat-card-title><h2>User LogIn</h2></mat-card-title>
+    <button
+      style="margin-left: 30%"
+      mat-raised-button
+      color="primary"
+      (click)="about()"
+    >
+      About page
+    </button>
   </mat-card-header>
   <mat-card-content>
     <form
