--- a/src/app/aboutpage/aboutpage.component.html
+++ b/src/app/aboutpage/aboutpage.component.html
@@ -48,7 +48,7 @@
       </p>
     </div>
   </mat-card-content>
-  <mat-card-footer style="padding: 10px">
+  <mat-card-footer style="padding: 10px; color: black">
     The Page is desing by Athar Hossain<br />
     Phone No: 8240764685 <br />Email:ashar7003@gmail.com
   </mat-card-footer>
