--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,11 +1,12 @@
 <button
-  style="margin-left: 500px"
+  style="margin-left: 300px"
   mat-raised-button
   color="primary"
   (click)="updateUser(loggedInUser)"
 >
   Update Details
 </button>
+<!-- <div class="mat-elevation-z2"> -->
 <mat-card class="example-card">
   <mat-card-header>
     <mat-card-title-group>
@@ -22,3 +23,4 @@
     <label><B>Role:</B></label> {{ loggedInUser?.role }}<br />
   </mat-card-content>
 </mat-card>
+<!-- </div> -->
